@@ -1,0 +1,33 @@
+<?xml version="1.0"?>
+<!DOCTYPE modification SYSTEM "http://www.simplemachines.org/xml/modification">
+
+<modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
+	<id>el:prettyurls</id>
+	<version>0.8</version>
+
+	<file name="$themedir/ManageBoards.template.php">
+		<operation>
+			<search position="after"><![CDATA[
+								<td>
+									<b>', $txt[44], ':</b><br />
+									', $txt[672], '<br /><br />
+								</td>
+								<td valign="top" align="right">
+									<input type="text" name="board_name" value="', $context['board']['name'], '" size="30" />
+								</td>
+							</tr><tr>
+]]></search>
+			<add><![CDATA[
+								<td>
+									<b>', $txt['pretty']['url'], ':</b><br />
+									', $txt['pretty']['url_desc'], '<br /><br />
+								</td>
+								<td valign="top" align="right">
+									<input type="text" name="pretty_url" value="', $context['board']['pretty_url'], '" size="30" />
+								</td>
+							</tr><tr>
+]]></add>
+		</operation>
+	</file>
+
+</modification>
